; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_qpeldsp_msa.c_hv_mc_qpel_aver_h_src0_16x16_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_qpeldsp_msa.c_hv_mc_qpel_aver_h_src0_16x16_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32)* @hv_mc_qpel_aver_h_src0_16x16_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hv_mc_qpel_aver_h_src0_16x16_msa(i32* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca [272 x i32], align 16
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = getelementptr inbounds [272 x i32], [272 x i32]* %9, i64 0, i64 0
  %13 = call i32 @hv_mc_qpel_aver_horiz_src0_16x16_msa(i32* %10, i32 %11, i32* %12, i32 16, i32 16)
  %14 = getelementptr inbounds [272 x i32], [272 x i32]* %9, i64 0, i64 0
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @vert_mc_qpel_16x16_msa(i32* %14, i32 16, i32* %15, i32 %16)
  ret void
}

declare dso_local i32 @hv_mc_qpel_aver_horiz_src0_16x16_msa(i32*, i32, i32*, i32, i32) #1

declare dso_local i32 @vert_mc_qpel_16x16_msa(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
